# kbrain-ems

./: .gitignore  CLAUDE.md  EMS_요건정리_보고용.html  automation_priority_v1.1-1.html  seed_students.sql
.claude/commands/: cohort-report.md  session-report.md
doc-audit/: .gitignore  pyproject.toml
doc-audit/doc_audit/: models.py
doc-audit/doc_audit/checks/: __init__.py  budget.py  dates.py  numbers.py  sections.py
doc-audit/scripts/: smoke_test_hwp.py  smoke_test_openai.py
doc-audit/tests/: test_budget.py  test_dates.py  test_numbers.py  test_sections.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/scripts/: backfill-assignment-session.ts  check-cohorts-tracks.ts  check-organizations.ts  check-respondent-total.ts  clear-ai-literacy-date.ts  clear-dummy-applications.ts  cohort-report-data.ts  create-aichamp-cohorts.ts  delete-blue-cohort.ts  delete-bosu-sessions.ts  enrich-students-from-screening.ts  expand-multiday-sessions.ts  extract-k-icon.mjs  fill-aichamp-cohorts.ts  fill-assignment-1ch.ts  fill-birth-date.ts  fill-cohort-schedule.ts  fill-session-end-dates.ts  import-ai-champion-week1.ts  import-survey-57.ts  inspect-assignments.ts  inspect-db-surveys.ts  inspect-excel.ts  inspect-existing-responses.ts  inspect-instructors.ts  inspect-survey-xlsx.ts  migrate-likert10.ts  rename-1ch-titles.ts  rename-cohorts.ts  rename-share-codes.ts  restore-cf21aaa7.ts  revert-experts-expand.ts  (+15 more)
migrations/: 20260507_applicants_schema.sql  20260507_backfill_applicants.sql  20260511_ems_phase1_scaffold.sql
supabase/: seed.sql  seed_survey_5_7.sql
(+199 files in other folders)
